--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.7",
     "oracledb": "^5.1.0",
     "swagger-jsdoc": "5.0.1",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "errorhandler": "^1.5.1"
   }
 }
