config cicd test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,11 @@ init:
     - npm install
   only:
     - dev
+    - test
 
 build_dev:
   stage: build
-  script: 
-#    - npm run build
-#    - cp -f ~/project/wait/wait .
+  script:
     - docker build -t $DOCKER_REPOSITORY/dev-apps/itpm .
   only:
     - dev
@@ -31,3 +30,36 @@ staging_dev:
     - docker rmi $DOCKER_REPOSITORY/dev-apps/itpm
   only:
     - dev
+
+deploy_dev:
+  stage: deploy
+  script:
+    - ssh $USER@$HOST_DEV "cd ~/project/itpm && ./shutdown"
+    - ssh $USER@$HOST_DEV "cd ~/project/itpm && ./startup"
+  only:
+    - dev
+
+build_test:
+  stage: build
+  script:
+    - cp $PATH_KEY_TEST jwtRS256.key.pub
+    - docker build -t $DOCKER_REPOSITORY/test-apps/itpm .
+  only:
+    - test
+
+staging_test:
+  stage: staging
+  script:
+    - docker push $DOCKER_REPOSITORY/test-apps/itpm
+    - docker rmi $DOCKER_REPOSITORY/test-apps/itpm
+  only:
+    - test
+
+deploy_test:
+  stage: deploy
+  script:
+    - ssh $USER@$HOST_TEST "cd ~/project/itpm && ./shutdown"
+    - ssh $USER@$HOST_TEST "cd ~/project/itpm && ./startup"
+  only:
+    - test
+  when: manual
