--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "akbar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "custom-env": "^2.0.1",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "helmet": "^4.5.0",
@@ -22,7 +24,6 @@
     "nodemon": "^2.0.7",
     "oracledb": "^5.1.0",
     "swagger-jsdoc": "5.0.1",
-    "swagger-ui-express": "^4.1.6",
-    "errorhandler": "^1.5.1"
+    "swagger-ui-express": "^4.1.6"
   }
 }
