--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.7",
     "oracledb": "^5.1.0",
     "swagger-jsdoc": "5.0.1",
